--- a/awd/data/cfg/go_bdx/duckling_command.yaml
+++ b/awd/data/cfg/go_bdx/duckling_command.yaml
@@ -8,7 +8,7 @@ env:
   
   pdControl: True
   powerScale: 1.0
-  controlFrequencyInv: 1 # 30 Hz
+  controlFrequencyInv: 2 # 30 Hz
   stateInit: "Hybrid"
   hybridInitProb: 0.0
   numAMPObsSteps: 9
@@ -36,15 +36,17 @@ env:
     linearVelocityXYRewardScale: 0.5
     angularVelocityZRewardScale: 0.5
     torqueRewardScale: 0.0
+    feetAirTimeRewardScale: 1.0
+    actionRateRewardScale: -0.01
 
     # normalization
     linearVelocityScale: 1.0
     angularVelocityScale: 0.25
   
   randomCommandVelocityRanges:
-    linear_x: [-0.0, 0.0] # min max [m/s]
-    linear_y: [-0.0, 0.0]   # min max [m/s]
-    yaw: [-0.8, 0.8]          # min max [rad/s]
+    linear_x: [-0.8, 0.8] # min max [m/s]
+    linear_y: [-0.5, 0.5]   # min max [m/s]
+    yaw: [-1.0, 1.0]          # min max [rad/s]
 
 sim:
   substeps: 2
