--- a/awd/data/cfg/go_bdx/train/amp_duckling_command_task.yaml
+++ b/awd/data/cfg/go_bdx/train/amp_duckling_command_task.yaml
@@ -24,7 +24,7 @@ params:
         learn_sigma: False
 
     mlp:
-      units: [1024, 512]
+      units: [512, 256]
       activation: relu
       d2rl: False
 
@@ -32,7 +32,13 @@ params:
         name: default
       regularizer:
         name: None
-
+    rnn:
+      name: lstm
+      units: 256 #128
+      layers: 1
+      before_mlp: False #True
+      concat_input: True
+      layer_norm: False
     disc:
       units: [1024, 512]
       activation: relu
@@ -83,7 +89,7 @@ params:
     disc_logit_reg: 0.01
     disc_grad_penalty: 5
     disc_reward_scale: 2.0
-    disc_weight_decay: 0.00001
+    disc_weight_decay: 0.0000
     normalize_amp_input: True
     enable_eps_greedy: False
 
