--- a/awd/data/cfg/go_bdx/train/amp_duckling_command_task.yaml
+++ b/awd/data/cfg/go_bdx/train/amp_duckling_command_task.yaml
@@ -24,7 +24,7 @@ params:
         learn_sigma: False
 
     mlp:
-      units: [512, 256]
+      units: [512, 512, 512]
       activation: relu
       d2rl: False
 
@@ -32,13 +32,6 @@ params:
         name: default
       regularizer:
         name: None
-    rnn:
-      name: lstm
-      units: 256 #128
-      layers: 1
-      before_mlp: False #True
-      concat_input: True
-      layer_norm: False
     disc:
       units: [1024, 512]
       activation: relu
