--- a/awd/data/cfg/go_bdx/train/calm_duckling.yaml
+++ b/awd/data/cfg/go_bdx/train/calm_duckling.yaml
@@ -2,13 +2,13 @@ params:
   seed: -1
 
   algo:
-    name: awd
+    name: calm
 
   model:
-    name: awd
+    name: calm
 
   network:
-    name: awd
+    name: calm
     separate: True
 
     space:
@@ -24,7 +24,7 @@ params:
         learn_sigma: False
 
     mlp:
-      units: [1024, 1024, 512]
+      units: [512, 256]
       activation: relu
       d2rl: False
 
@@ -34,16 +34,22 @@ params:
         name: None
 
     disc:
-      units: [1024, 1024, 512]
+      units: [512, 256]
+      activation: relu
+
+      initializer:
+        name: default
+
+    conditional_disc:
+      units: [ 512, 256 ]
       activation: relu
 
       initializer:
         name: default
 
     enc:
-      units: [1024, 512]
+      units: [ 512, 256 ]
       activation: relu
-      separate: False
 
       initializer:
         name: default
@@ -51,11 +57,11 @@ params:
   load_checkpoint: False
 
   config:
-    name: Duckling
+    name: Humanoid
     env_name: rlgpu
     multi_gpu: False
     ppo: True
-    mixed_precision: False
+    mixed_precision: True
     normalize_input: True
     normalize_value: True
     reward_shaper:
@@ -63,12 +69,13 @@ params:
     normalize_advantage: True
     gamma: 0.99
     tau: 0.95
-    learning_rate: 4e-5
+    learning_rate: 2e-5
     lr_schedule: constant
     score_to_win: 20000
     max_epochs: 100000
     save_best_after: 50
     save_frequency: 50
+    save_intermediate: True
     print_stats: True
     grad_norm: 1.0
     entropy_coef: 0.0
@@ -82,33 +89,30 @@ params:
     clip_value: False
     seq_len: 4
     bounds_loss_coef: 10
-    amp_obs_demo_buffer_size: 80000
-    amp_replay_buffer_size: 80000
+    amp_obs_demo_buffer_size: 50000
+    amp_replay_buffer_size: 50000
     amp_replay_keep_prob: 0.01
     amp_batch_size: 512
     amp_minibatch_size: 4096
     disc_coef: 5
     disc_logit_reg: 0.01
-    disc_grad_penalty: 10
+    disc_grad_penalty: 5
     disc_reward_scale: 2
     disc_weight_decay: 0.0001
+    conditional_disc_coef: 5
+    conditional_disc_logit_reg: 0.01
+    conditional_disc_grad_penalty: 5
+    conditional_disc_reward_scale: 2
+    conditional_disc_weight_decay: 0.0001
     normalize_amp_input: True
-    enable_eps_greedy: False
+    enable_eps_greedy: True
+    negative_disc_samples: False
 
-    latent_dim: 32
-    latent_steps_min: 1
+    latent_dim: 64
+    latent_steps_min: 10
     latent_steps_max: 150
-    
-    amp_latent_grad_bonus: 0.00
-    amp_latent_grad_bonus_max: 100.0
-    amp_diversity_bonus: 0.01
-    amp_diversity_tar: 0.5
-    
-    enc_coef: 5
-    enc_weight_decay: 0.0000
-    enc_reward_scale: 1
-    enc_grad_penalty: 0
 
-    task_reward_w: 0.33
-    disc_reward_w: 0.33
-    enc_reward_w: 0.33
+    task_reward_w: 0.0
+    disc_reward_w: 0.0
+    conditional_disc_reward_w: 1.0
+    enc_regularization_coeff: 0.1
