--- a/awd/data/cfg/go_bdx/train/amp_duckling_command_task.yaml
+++ b/awd/data/cfg/go_bdx/train/amp_duckling_command_task.yaml
@@ -24,7 +24,7 @@ params:
         learn_sigma: False
 
     mlp:
-      units: [512, 512, 512]
+      units: [512, 256]
       activation: relu
       d2rl: False
 
