add t-2 actions and fix avg velocity reset

--- a/awd/data/cfg/go_bdx/train/amp_duckling_command_task.yaml
+++ b/awd/data/cfg/go_bdx/train/amp_duckling_command_task.yaml
@@ -24,8 +24,8 @@ params:
         learn_sigma: False
 
     mlp:
-      units: [512, 256]
-      activation: relu
+      units: [1024, 512]
+      activation: tanh
       d2rl: False
 
       initializer:
