--- a/awd/data/cfg/go_bdx/train/amp_duckling_command_task.yaml
+++ b/awd/data/cfg/go_bdx/train/amp_duckling_command_task.yaml
@@ -46,7 +46,7 @@ params:
     env_name: rlgpu
     multi_gpu: False
     ppo: True
-    mixed_precision: False
+    mixed_precision: True
     normalize_input: True
     normalize_value: True
     reward_shaper:
@@ -64,17 +64,17 @@ params:
     save_intermediate: True
     print_stats: True
     grad_norm: 1.0
-    entropy_coef: 0
-    truncate_grads: False
+    entropy_coef: 0.001
+    truncate_grads: True
     ppo: True
     e_clip: 0.2
     horizon_length: 32
     minibatch_size: 16384
     mini_epochs: 6
-    critic_coef: 5
-    clip_value: False
+    critic_coef: 2
+    clip_value: True
     seq_len: 4
-    bounds_loss_coef: 10
+    bounds_loss_coef: 2
     amp_obs_demo_buffer_size: 200000
     amp_replay_buffer_size: 200000
     amp_replay_keep_prob: 0.01
