--- a/awd/data/cfg/go_bdx/train/duckling_standing_task.yaml
+++ b/awd/data/cfg/go_bdx/train/duckling_standing_task.yaml
@@ -24,7 +24,7 @@ params:
         learn_sigma: False
 
     mlp:
-      units: [512, 512, 128]
+      units: [512, 256]
       activation: elu
       d2rl: False
 
@@ -33,7 +33,7 @@ params:
       regularizer:
         name: None
     disc:
-      units: [1024, 512]
+      units: [1]
       activation: relu
 
       initializer:
@@ -52,10 +52,10 @@ params:
     reward_shaper:
       scale_value: 1
     normalize_advantage: True
-    gamma: 0.95
+    gamma: 0.99
     tau: 0.95
     learning_rate: 4e-5 # overwritten if adaptive lr_schedule
-    lr_schedule: adaptive # constant
+    lr_schedule: constant # constant
     kl_threshold: 0.008 # target kl for adaptive lr
     score_to_win: 20000
     max_epochs: 100000
@@ -88,5 +88,5 @@ params:
     normalize_amp_input: True
     enable_eps_greedy: False
 
-    task_reward_w: 0.47
-    disc_reward_w: 0.53
+    task_reward_w: 1.0
+    disc_reward_w: 0.0
