working height tracking

--- a/awd/data/cfg/go_bdx/train/duckling_standing_task.yaml
+++ b/awd/data/cfg/go_bdx/train/duckling_standing_task.yaml
@@ -25,7 +25,7 @@ params:
 
     mlp:
       units: [512, 256]
-      activation: elu
+      activation: relu
       d2rl: False
 
       initializer:
@@ -33,7 +33,7 @@ params:
       regularizer:
         name: None
     disc:
-      units: [1]
+      units: [128, 64]
       activation: relu
 
       initializer:
@@ -55,7 +55,7 @@ params:
     gamma: 0.99
     tau: 0.95
     learning_rate: 4e-5 # overwritten if adaptive lr_schedule
-    lr_schedule: constant # constant
+    lr_schedule: adaptive # constant
     kl_threshold: 0.008 # target kl for adaptive lr
     score_to_win: 20000
     max_epochs: 100000
