--- a/awd/data/cfg/go_bdx/duckling_standing.yaml
+++ b/awd/data/cfg/go_bdx/duckling_standing.yaml
@@ -2,7 +2,7 @@
 env: 
   numEnvs: 4096
   envSpacing: 1
-  episodeLength: 300
+  episodeLength: 600
   isFlagrun: False
   enableDebugVis: False
   
@@ -21,9 +21,9 @@ env:
   terminationHeight: -0.1
   enableEarlyTermination: True
   enableTaskObs: True
-  randomizeMaskJoints: False
-  commandChangeStepsMin: 1000
-  commandChangeStepsMax: 1001
+  randomizeMaskJoints: True
+  commandChangeStepsMin: 150
+  commandChangeStepsMax: 200
   period: 0.84
 
   asset:
@@ -37,11 +37,13 @@ env:
 
   learn:
     # rewards
-    lineardRewardScale: 1.0
-    angularRewardScale: 1.0
-    torqueRewardScale: -0.000
-    actionRateRewardScale: -0.005
-    feetAirTimeRewardScale: -1.0
+    linTrackingRewardScale: 10.0
+    angTrackingRewardScale: 1.0
+    torqueRewardScale: -0.0000
+    actionRateRewardScale: -0.01
+    linVelPenalizeScale: -1.0
+    angVelPenalizeScale: -1.0
+    orientPenalizeScale: -0.0
 
     # normalization
     linearScale: 1.0
@@ -49,7 +51,7 @@ env:
     useAverageVelocities: False
 
   randomCommandRanges:
-    linear: [-0.06, 0.1] # min max [m]
+    linear: [-0.035, 0.02] # min max [m]
     angular: [-10, 10]   # min max [deg]
 
 sim:
