--- a/awd/data/cfg/go_bdx/train/amp_duckling.yaml
+++ b/awd/data/cfg/go_bdx/train/amp_duckling.yaml
@@ -50,24 +50,27 @@ params:
     mixed_precision: False
     normalize_input: True
     normalize_value: True
+    value_bootstrap: True
     reward_shaper:
       scale_value: 1
     normalize_advantage: True
     gamma: 0.95
     tau: 0.95
-    learning_rate: 2e-5
-    lr_schedule: constant
+    learning_rate: 4e-5
+    lr_schedule: adaptive
+    kl_threshold: 0.008
     score_to_win: 20000
-    max_epochs: 1000000
+    max_epochs: 100000
     save_best_after: 50
     save_frequency: 50
+    save_intermediate: True
     print_stats: True
     grad_norm: 1.0
-    entropy_coef: 0.01
+    entropy_coef: 0.0
     truncate_grads: False
     ppo: True
     e_clip: 0.2
-    horizon_length: 32
+    horizon_length: 16
     minibatch_size: 16384
     mini_epochs: 6
     critic_coef: 5
@@ -80,9 +83,9 @@ params:
     amp_batch_size: 512
     amp_minibatch_size: 4096
     disc_coef: 5
-    disc_logit_reg: 0.01
-    disc_grad_penalty: 0.01
-    disc_reward_scale: 5
+    disc_logit_reg: 0.05
+    disc_grad_penalty: 5
+    disc_reward_scale: 2
     disc_weight_decay: 0.0001
     normalize_amp_input: True
     enable_eps_greedy: False
