--- a/awd/data/cfg/go_bdx/duckling_standing.yaml
+++ b/awd/data/cfg/go_bdx/duckling_standing.yaml
@@ -53,18 +53,45 @@ env:
     linear: [-0.03, 0.02] # min max [m]
     angular: [-10, 10]   # min max [deg]
 
+  terrain:
+    terrainType: trimesh # plane, or trimesh
+    staticFriction: 1.0 # [-]
+    dynamicFriction: 1.0 # [-]
+    restitution: 0. # [-]
+    # rough terrain only:
+    curriculum: true
+    maxInitMapLevel: 0
+    mapLength: 15
+    mapWidth: 15
+    numLevels: 10
+    numTerrains: 10
+    # terrain types: [smooth slope, rough slope, stairs up, stairs down, discrete]
+    terrainProportions: [0.2, 0.2, 0.2, 0.2, 0.2]
+    # tri mesh only:
+    slopeTreshold: 0.8
+    horizontalScale: 0.25
+    verticalScale: 0.005
+    borderSize: 5
+    numPerEnv: 2
+    minHeight: -0.001
+    maxHeight: 0.001
+    step: 0.05
+    platformSize: 0.5 # pyramids
+    stepHeightRange: [-0.05, 0.05] # pyramid stairs
+    stepWidth: 0.1
+
 sim:
-  substeps: 2
+  substeps: 1
   physx:
     num_threads: 4
     solver_type: 1  # 0: pgs, 1: tgs
     num_position_iterations: 4
-    num_velocity_iterations: 0
+    num_velocity_iterations: 1
     contact_offset: 0.02
     rest_offset: 0.0
     bounce_threshold_velocity: 0.2
-    max_depenetration_velocity: 10.0
-    default_buffer_size_multiplier: 10.0
+    max_depenetration_velocity: 100.0
+    default_buffer_size_multiplier: 5.0
     contact_collection: 1
 
   flex:
