--- a/awd/data/cfg/go_bdx/duckling_command.yaml
+++ b/awd/data/cfg/go_bdx/duckling_command.yaml
@@ -40,27 +40,28 @@ env:
     linearVelocityXYRewardScale: [1.0, 0.5]
     angularVelocityZRewardScale: 0.5
     torqueRewardScale: -0.001
-    feetAirTimeRewardScale: 0.2
+    feetAirTimeRewardScale: 0.05
     actionRateRewardScale: -0.005
+    standStillRewardScale: 0.1
 
     # normalization
-    linearVelocityScale: [2.0, 1.0]
+    linearVelocityScale: [1.0, 1.0]
     angularVelocityScale: 0.25
     useAverageVelocities: True
 
   randomCommandVelocityRanges:
-    linear_x: [-0.3, 0.4] # min max [m/s]
+    linear_x: [-0.3, 0.5] # min max [m/s]
     linear_y: [-0.4, 0.4]   # min max [m/s]
     yaw: [-0.6, 0.6]          # min max [rad/s]
   
   terrain:
-    terrainType: trimesh # plane, or trimesh
+    terrainType: plane # plane, or trimesh
     staticFriction: 1.0 # [-]
     dynamicFriction: 1.0 # [-]
     restitution: 0. # [-]
     # rough terrain only:
     curriculum: true
-    maxInitMapLevel: 3
+    maxInitMapLevel: 2
     mapLength: 15
     mapWidth: 15
     numLevels: 4
