--- a/awd/data/cfg/mini2_bdx/train/amp_duckling_command_task.yaml
+++ b/awd/data/cfg/mini2_bdx/train/amp_duckling_command_task.yaml
@@ -24,8 +24,8 @@ params:
         learn_sigma: False
 
     mlp:
-      units: [512, 256, 128]
-      activation: relu
+      units: [512, 512, 512]
+      activation: elu
       d2rl: False
 
       initializer:
@@ -84,9 +84,9 @@ params:
     disc_logit_reg: 0.01
     disc_grad_penalty: 5
     disc_reward_scale: 2.0
-    disc_weight_decay: 0.00001
+    disc_weight_decay: 0.0001
     normalize_amp_input: True
     enable_eps_greedy: False
 
-    task_reward_w: 0.4
-    disc_reward_w: 0.6
+    task_reward_w: 0.47
+    disc_reward_w: 0.53
