--- a/awd/data/cfg/go_bdx/duckling_command.yaml
+++ b/awd/data/cfg/go_bdx/duckling_command.yaml
@@ -17,6 +17,14 @@ env:
   pushStep: 150 #s
   pushStepRandomRange: 80 # push works at pushStep +- pushStepRandomRange
   maxPushVelXy: 0.5
+
+  # COM is randomized only once for each actor, but not at each reset
+  randomizeCom: False
+  comRandomizeRange: [-0.1, 0.1]
+  randomizeTorques: False
+  torqueMultiplierRange: [0.85, 1.15]
+
+  customControl: False
   
   localRootObs: True
   keyBodies: ["left_foot", "right_foot"]
