--- a/awd/data/assets/mini2_bdx/mini2_bdx_props.yaml
+++ b/awd/data/assets/mini2_bdx/mini2_bdx_props.yaml
@@ -14,7 +14,7 @@ joints:
   - right_hip_pitch
   - right_knee
   - right_ankle
-  
+
 dof_body_ids: [1, 2, 3, 4, 6, 7, 9, 10, 11, 12, 13]
 dof_offsets: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
 
@@ -26,16 +26,16 @@ num_amp_obs_per_step: 47
 # motor_efforts are only used in torque control mode (pd_control=False)
 # p_gains and d_gains are only used in custom control mode
 dof_props:
-  left_hip_yaw:    {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": 0.002, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  left_hip_roll:   {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": 0.053, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  left_hip_pitch:  {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": -0.63, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  left_knee:       {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": 1.368, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  left_ankle:      {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": -0.784, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  neck_pitch:      {"damping": 1, "stiffness": 8, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": -0.000, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2} 
-  head_pitch:      {"damping": 1, "stiffness": 5, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": -0.000, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  head_yaw:        {"damping": 1, "stiffness": 5, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": 0.000, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  right_hip_yaw:   {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": -0.003, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  right_hip_roll:  {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": -0.065, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  right_hip_pitch: {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": 0.635, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  right_knee:      {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": 1.379, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  right_ankle:     {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 5.2, "max_effort": 3, "init_pos": -0.796, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}  
+  left_hip_yaw:    {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": 0.002, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
+  left_hip_roll:   {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": 0.053, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
+  left_hip_pitch:  {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.63, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
+  left_knee:       {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": 1.368, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
+  left_ankle:      {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.784, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
+  neck_pitch:      {"damping": 1, "stiffness": 8, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.000, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2} 
+  head_pitch:      {"damping": 1, "stiffness": 5, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.000, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
+  head_yaw:        {"damping": 1, "stiffness": 5, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": 0.000, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
+  right_hip_yaw:   {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.003, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
+  right_hip_roll:  {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.065, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
+  right_hip_pitch: {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": 0.635, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
+  right_knee:      {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": 1.379, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
+  right_ankle:     {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.796, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}  
