--- a/awd/data/assets/go_bdx/go_bdx_props.yaml
+++ b/awd/data/assets/go_bdx/go_bdx_props.yaml
@@ -15,6 +15,7 @@ joints:
   - right_hip_pitch
   - right_knee
   - right_ankle
+
 dof_body_ids: [1, 2, 3, 4, 6, 7, 9, 10, 11, 12, 13, 14, 15]
 dof_offsets: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
 
@@ -27,20 +28,20 @@ num_amp_obs_per_step: 53
 # motor_efforts are only used in torque control mode (pd_control=False)
 # p_gains and d_gains are only used in custom control mode
 dof_props:
-  left_hip_yaw:    {"damping": 1.5, "stiffness": 40, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  left_hip_roll:   {"damping": 1.5, "stiffness": 40, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  left_hip_pitch:  {"damping": 1.5, "stiffness": 40, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  left_knee:       {"damping": 1.5, "stiffness": 35, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  left_ankle:      {"damping": 1.5, "stiffness": 30, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  neck_pitch:      {"damping": 1.5, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2} 
-  head_pitch:      {"damping": 1.5, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  head_yaw:        {"damping": 1.5, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  head_roll:       {"damping": 1.5, "stiffness": 10, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  left_antenna:    {"damping": 1.5, "stiffness": 5, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  right_antenna:   {"damping": 1.5, "stiffness": 5, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2} 
-  right_hip_yaw:   {"damping": 1.5, "stiffness": 40, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  right_hip_roll:  {"damping": 1.5, "stiffness": 40, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  right_hip_pitch: {"damping": 1.5, "stiffness": 40, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  right_knee:      {"damping": 1.5, "stiffness": 35, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
-  right_ankle:     {"damping": 1.5, "stiffness": 30, "friction": 0.0, "armature": 0.0, "max_velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}  
+  left_hip_yaw:    {"damping": 1.5, "stiffness": 40, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  left_hip_roll:   {"damping": 1.5, "stiffness": 40, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  left_hip_pitch:  {"damping": 1.5, "stiffness": 40, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  left_knee:       {"damping": 1.5, "stiffness": 35, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  left_ankle:      {"damping": 1.5, "stiffness": 30, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  neck_pitch:      {"damping": 1.5, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2} 
+  head_pitch:      {"damping": 1.5, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  head_yaw:        {"damping": 1.5, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  head_roll:       {"damping": 1.5, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  left_antenna:    {"damping": 1.5, "stiffness": 5, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  right_antenna:   {"damping": 1.5, "stiffness": 5, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2} 
+  right_hip_yaw:   {"damping": 1.5, "stiffness": 40, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  right_hip_roll:  {"damping": 1.5, "stiffness": 40, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  right_hip_pitch: {"damping": 1.5, "stiffness": 40, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  right_knee:      {"damping": 1.5, "stiffness": 35, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}
+  right_ankle:     {"damping": 1.5, "stiffness": 30, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 23.7, "init_pos": 0.0, "motor_efforts": 100, "p_gain": 10, "d_gain": 0.2}  
   
