--- a/awd/data/cfg/go_bdx/duckling_standing.yaml
+++ b/awd/data/cfg/go_bdx/duckling_standing.yaml
@@ -11,7 +11,21 @@ env:
   controlFrequencyInv: 2 # 30 Hz
   stateInit: "Hybrid"
   hybridInitProb: 0.0
-  numAMPObsSteps: 2
+  numAMPObsSteps: 10
+
+  pushRobots: True
+  pushStep: 100 #s
+  pushStepRandomRange: 80 # push works at pushStep +- pushStepRandomRange
+  continousPushSteps: 30
+  maxPushVelXy: 0.2
+
+  # COM is randomized only once for each actor, but not at each reset
+  randomizeCom: True
+  comRandomizeRange: [-0.05, 0.05]
+  randomizeTorques: False
+  torqueMultiplierRange: [0.85, 1.15]
+
+  customControl: False
   
   localRootObs: True
   keyBodies: ["left_foot", "right_foot"]
@@ -40,7 +54,7 @@ env:
     linTrackingRewardScale: 0.1
     angTrackingRewardScale: 1.0
     torqueRewardScale: -0.0000
-    actionRateRewardScale: -0.01
+    actionRateRewardScale: -0.1
     linVelPenalizeScale: -1.0
     angVelPenalizeScale: -1.0
 
