--- a/awd/data/cfg/mini2_bdx/duckling_command.yaml
+++ b/awd/data/cfg/mini2_bdx/duckling_command.yaml
@@ -14,9 +14,10 @@ env:
   numAMPObsSteps: 20
 
   pushRobots: False
-  pushStep: 150 #s
+  pushStep: 300 #s
   pushStepRandomRange: 80 # push works at pushStep +- pushStepRandomRange
-  maxPushVelXy: 0.3
+  continousPushSteps: 10
+  maxPushVelXy: 0.05
 
   # COM is randomized only once for each actor, but not at each reset
   randomizeCom: False
