--- a/awd/data/assets/mini2_bdx/mini2_bdx_props.yaml
+++ b/awd/data/assets/mini2_bdx/mini2_bdx_props.yaml
@@ -26,16 +26,172 @@ num_amp_obs_per_step: 41
 # motor_efforts are only used in torque control mode (pd_control=False)
 # p_gains and d_gains are only used in custom control mode
 dof_props:
-  left_hip_yaw:    {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": 0.002, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  left_hip_roll:   {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": 0.053, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  left_hip_pitch:  {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.63, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  left_knee:       {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": 1.368, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  left_ankle:      {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.784, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  neck_pitch:      {"damping": 1, "stiffness": 8, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.000, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2} 
-  head_pitch:      {"damping": 1, "stiffness": 5, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.000, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  head_yaw:        {"damping": 1, "stiffness": 5, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": 0.000, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  right_hip_yaw:   {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.003, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  right_hip_roll:  {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.065, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  right_hip_pitch: {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": 0.635, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  right_knee:      {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": 1.379, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}
-  right_ankle:     {"damping": 1, "stiffness": 10, "friction": 0.0, "armature": 0.0, "velocity": 30, "max_effort": 3, "init_pos": -0.796, "motor_efforts": 10, "p_gain": 10, "d_gain": 0.2}  
+  left_hip_yaw:
+    {
+      "damping": 1.0,
+      "stiffness": 10,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": 0.002,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
+  left_hip_roll:
+    {
+      "damping": 1.0,
+      "stiffness": 10,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": 0.053,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
+  left_hip_pitch:
+    {
+      "damping": 1.0,
+      "stiffness": 10,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": -0.63,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
+  left_knee:
+    {
+      "damping": 1.0,
+      "stiffness": 10,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": 1.368,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
+  left_ankle:
+    {
+      "damping": 1.0,
+      "stiffness": 10,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": -0.784,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
+  neck_pitch:
+    {
+      "damping": 1.0,
+      "stiffness": 8,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": -0.000,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
+  head_pitch:
+    {
+      "damping": 1.0,
+      "stiffness": 5,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": -0.000,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
+  head_yaw:
+    {
+      "damping": 1.0,
+      "stiffness": 5,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": 0.000,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
+  right_hip_yaw:
+    {
+      "damping": 1.0,
+      "stiffness": 10,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": -0.003,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
+  right_hip_roll:
+    {
+      "damping": 1.0,
+      "stiffness": 10,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": -0.065,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
+  right_hip_pitch:
+    {
+      "damping": 1.0,
+      "stiffness": 10,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": 0.635,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
+  right_knee:
+    {
+      "damping": 1.0,
+      "stiffness": 10,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": 1.379,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
+  right_ankle:
+    {
+      "damping": 1.0,
+      "stiffness": 10,
+      "friction": 0.03,
+      "armature": 0.0056,
+      "velocity": 300,
+      "max_effort": 100,
+      "init_pos": -0.796,
+      "motor_efforts": 10,
+      "p_gain": 5.68,
+      "d_gain": 0.1,
+    }
