--- a/awd/data/cfg/mini2_bdx/duckling_command.yaml
+++ b/awd/data/cfg/mini2_bdx/duckling_command.yaml
@@ -25,7 +25,7 @@ env:
   randomizeTorques: False
   torqueMultiplierRange: [0.85, 1.15]
 
-  customControl: False
+  customControl: True
 
   localRootObs: True
   keyBodies: ["left_foot", "right_foot"]
@@ -56,7 +56,7 @@ env:
     angularVelocityZRewardScale: 1.5
     torqueRewardScale: -0.000
     feetAirTimeRewardScale: 1.0
-    actionRateRewardScale: -0.05
+    actionRateRewardScale: -0.5
     standStillRewardScale: 0.0
 
     # normalization
